# investing-disclosure-watch

./: .gitignore  README.md  StartApp.vbs  build_once.cmd  package-lock.json  package.json  pyproject.toml  run_app.cmd  start-app.bat  start-dev.bat  start.bat  stop_app.cmd
.github/workflows/: ci.yml
docs/: mvp-plan.md
lib/: db.js
pages/: disclosures.js  index.js  pdf.js  tanshin-summary-analysis.js  tanshin-summary.js  tanshin-upload.js  watchlist.js
pages/api/: disclosures.js  pdf.js  proxy-pdf.js  tanshin-analysis.js  tanshin-extract.js  tanshin-summary.js  tanshin-upload.js  watchlist.js
pages/disclosures/: [id].js
src/components/: TanshinSummaryView.js
src/ta/: __init__.py  __main__.py  constants.py  extractors.py  pipeline.py  tsv.py
tests/: test_tsv.py
