[project]
name = "tanshin-analyzer"
version = "0.1.0"
description = "Local PDF tanshin analyzer producing TSV/JSON outputs."
requires-python = ">=3.11"
dependencies = [
  "pdfplumber>=0.11.0",
  "watchfiles>=0.21.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
